Import of STBEY/Config-Manager-1.1 from CPAN.
gitpan-cpan-distribution: Config-Manager
gitpan-cpan-version:      1.1
gitpan-cpan-path:         STBEY/Config-Manager-1.1.tar.gz
gitpan-cpan-author:       STBEY
gitpan-cpan-maturity:     released

--- a/lib/Config/Manager/Conf.ini
+++ b/lib/Config/Manager/Conf.ini
@@ -18,95 +18,16 @@
 #    -  Keine literalen Sonderzeichen (Umlaute u.ae.)         #
 #       verwenden, da DOS/Windows nicht ISO-Latin-1-konform   #
 #       ist! (Statt dessen die \xFF-Schreibweise benutzen!)   #
-#    -  Alle betriebssystemabhaengigen Pfade gehoeren in      #
-#       die globale Konfigurations-Datei DEFAULT.ini          #
+#       (Gilt nur bei parallelem Einsatz auf DOS/Unix)        #
 #                                                             #
 ###############################################################
 
-Home-Dir     = $[$[SPECIAL]{OS}]{Home-Dir}
-Group-Dir    = $[$[SPECIAL]{OS}]{Group-Dir}
-Default-User = $[$[SPECIAL]{OS}]{Default-User}
-MACHINELONG  = $[$[SPECIAL]{OS}]{MACHINELONG}
-MACHINE      = $[$[SPECIAL]{OS}]{MACHINE}
-TEMPDIRPATH  = $[$[SPECIAL]{OS}]{TEMPDIRPATH}
-LOGFILEPATH  = $[DEFAULT]{Group-Dir}/SPU/Logfiles
-CONFIGPATH   = $[DEFAULT]{Group-Dir}/SPU/Config
-CONFIG       = $[DEFAULT]{CONFIGPATH}/Global/DEFAULT.ini
-
-# Windows NT
-[MSWin32]
-Home-Dir     = U:
-Group-Dir    = G:
-Default-User = client
-MACHINELONG  = $[ENV]{COMPUTERNAME}.$[ENV]{USERDOMAIN}
-MACHINE      = $[ENV]{COMPUTERNAME}
-
-[UNIX]
-Home-Dir     = $[SPECIAL]{HOME}
-Group-Dir    = $[$[SPECIAL]{OS}]{Base-Dir}/$[$[SPECIAL]{OS}]{Default-User}
-
-# Client
-[linux]
-Base-Dir     = /home
-Home-Dir     = $[UNIX]{Home-Dir}
-Group-Dir    = $[UNIX]{Group-Dir}
-Default-User = client
-MACHINELONG  = $[ENV]{HOSTNAME}
-MACHINE      = $[ENV]{HOST}
-
-# Server
-[solaris]
-Base-Dir     = /home
-Home-Dir     = $[UNIX]{Home-Dir}
-Group-Dir    = $[UNIX]{Group-Dir}
-Default-User = spuadmin
-MACHINELONG  = $[ENV]{HOSTNAME}
-MACHINE      = $[ENV]{HOSTNAME}
-
-# Server
-[sunos]
-Base-Dir     = /u
-Home-Dir     = $[UNIX]{Home-Dir}
-Group-Dir    = $[UNIX]{Group-Dir}
-Default-User = client
-MACHINELONG  = $[ENV]{HOST}
-MACHINE      = $[ENV]{HOST}
-
-# PC
-[freebsd]
-Base-Dir     = /u
-Home-Dir     = $[UNIX]{Home-Dir}
-Group-Dir    = $[UNIX]{Group-Dir}
-Default-User = client
-MACHINELONG  = $[ENV]{HOSTNAME}
-MACHINE      = $[ENV]{HOSTNAME}
-
-# Server
-[hpux]
-Base-Dir     = /home
-Home-Dir     = $[UNIX]{Home-Dir}
-Group-Dir    = $[UNIX]{Group-Dir}
-Default-User = client
-MACHINELONG  = $[ENV]{HOSTNAME}
-MACHINE      = $[ENV]{HOSTNAME}
-
-[KM]
-CONFIG   = $[DEFAULT]{CONFIGPATH}/Group/KM.ini
-NEXTCONF = $[DEFAULT]{Home-Dir}/Config/KM.ini
-
-[SPU]
-CONFIG   = $[DEFAULT]{CONFIGPATH}/Group/SPU.ini
-NEXTCONF = $[DEFAULT]{Home-Dir}/Config/SPU.ini
-
-[CLIENT]
-CONFIG   = $[DEFAULT]{CONFIGPATH}/Group/CLIENT.ini
-NEXTCONF = $[DEFAULT]{Home-Dir}/Config/CLIENT.ini
+[DEFAULT]
+CONFIGPATH  = t
+LOGFILEPATH = .
 
 [Manager]
-CONFIG   = $[DEFAULT]{CONFIGPATH}/Group/BASE.ini
-#NEXTCONF = $[DEFAULT]{Home-Dir}/Config/BASE.ini
-NEXTCONF = $[DEFAULT]{CONFIG}
+NEXTCONF = $[DEFAULT]{CONFIGPATH}/hard_defaults.ini
 
 [TEST]
 NEXTCONF = t/TEST.ini
-
