Import of STBEY/Config-Manager-1.6 from CPAN.
gitpan-cpan-distribution: Config-Manager
gitpan-cpan-version:      1.6
gitpan-cpan-path:         STBEY/Config-Manager-1.6.tar.gz
gitpan-cpan-author:       STBEY
gitpan-cpan-maturity:     released

--- a/lib/Config/Manager/Conf.ini
+++ b/lib/Config/Manager/Conf.ini
@@ -13,6 +13,9 @@
 #                                                             #
 #    -  Ein Dollarzeichen wird durch $$ kodiert               #
 #    -  Ein Leerstring wird durch "" kodiert                  #
+#    -  Wenn ein String am Anfang oder Ende Leerzeichen       #
+#       enthalten oder nur aus Leerzeichen bestehen soll,     #
+#       muss er mit "" umschlossen werden                     #
 #    -  _ALLE_ Pfadangaben mit "/", _NICHT_ mit "\"!          #
 #    -  Keine abschliessenden "/" am Ende von Pfaden          #
 #    -  Keine literalen Sonderzeichen (Umlaute u.ae.)         #
